Fix bug to close offcanvas when button is clicked

--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -19,7 +19,7 @@
 
 <!-- Button in navbar -->
 {% block btn-nav %}
-<div class="text-light" id="sidebar" ata-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+<div class="text-light" id="sidebar" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
     <i class="fas fa-bars"></i>
 </div>
 {% endblock btn-nav %}
