Set administration of user requests feature

--- a/templates/main.html
+++ b/templates/main.html
@@ -106,7 +106,7 @@
                     <h5 class="modal-title" id="supportModalLabel"><i class="fas fa-headset"></i> Support</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form method="POST" action="#" autocomplete="off" class="was-validated">
+                <form method="POST" action="/support/" autocomplete="off" class="was-validated">
                     {% csrf_token %}
                     <div class="modal-body">
 
