Total of patients (counter function)

--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -33,6 +33,8 @@
     {% else %}
     <button class="btn btn-outline-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#supportModal">Support</button>
     {% endif %}
+    <hr>
+    <div class="text-center mt-3">Total of patients: {{ count }}</div>
 </div>
 {% endblock body-sidebar %}
 
