Small card-title in responsive mode for smartphone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -288,4 +288,8 @@ body {
   #btn-cancel, #btn-proceed {
     width: 60px;
   }
+  #card-title {
+    margin-top: -5px;
+    margin-bottom: -5px;
+  }
 }
