--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -45,7 +45,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card card-body border-dark text-primary mt-5">
-                <span class="text-center txt-sm">{% block card-title %} FILL OUT THE FORM BELOW {% endblock card-title %}</span>
+                <span class="text-center txt-sm" id="card-title">{% block card-title %} FILL OUT THE FORM BELOW {% endblock card-title %}</span>
             </div>
             <form {% block Action %} action="/add_patient/" {% endblock Action %} method="POST" autocomplete="off" enctype="multipart/form-data" class="card p-3 border-dark mt-3">
                 {% csrf_token %}
