Fix validation error

--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -102,7 +102,7 @@
                 <!-- Smartphone mode (buttons) -->
                 <div id="btn-smartphone">
                     <div class="d-grid gap-2 mt-3">
-                        <button type="submit" class="btn btn-primary btn-sm txt-sm" id="btn-add">
+                        <button type="submit" class="btn btn-primary btn-sm txt-sm btn-add">
                             {% block Btn-content2 %}
                             <i class="fas fa-plus"></i>&nbsp;&nbsp;Add
                             {% endblock Btn-content2 %}
